--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run build node build/index.js",
     "dev": "npx nodemon",
-    "build": "rimraf build && tsc"
+    "build": "rimraf build && tsc",
+    "test": "jest --coverage "
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
