--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,3 @@
-sudo: false
-
-language: node_js
-
-node_js:
-   - node
-
-script:
-   - npm run lint
-   - npm run test:coveralls  
-
-
+after_success:
+  - npm run test
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
