--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "npm run build node build/index.js",
     "dev": "npx nodemon",
     "build": "rimraf build && tsc",
-    "test": "jest --coverage ",
-    "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info"
+    "test": "jest --coverage "
+    
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "coveralls": "^3.1.1",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
