--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "npm run build node build/index.js",
     "dev": "npx nodemon",
     "build": "rimraf build && tsc",
-    "test": "jest --coverage "
+    "test": "jest --coverage",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -29,6 +31,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "coveralls": "^3.1.1",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
