--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest --coverage",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +21,7 @@
     "joi": "^17.7.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
+    "pnpm": "^7.26.3",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
@@ -39,5 +39,6 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+    
   }
 }
