--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-node@master
       with:
         version: 18.x
+        
+    - name: Install pnpm
+      run: npm install -g pnpm
 
     - run: pnpm ci
     - run: pnpm run build --if-present
