--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install pnpm
       run: npm install -g pnpm
 
-    - run: pnpm ci --ignore-scripts
+    - run: pnpm ci --ignore-scripts=true
     - run: pnpm run build --if-present
     - run: pnpm test
     - name: Coverage Report
