--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,11 +18,9 @@ jobs:
       with:
         version: 18.x
         
-    - name: Install pnpm
-      run: npm install -g pnpm
+    - name: Install npm
       
-    - run: pnpm ci
-    - run: pnpm run build --if-present
-    - run: pnpm test
+    - run: npm run build --if-present
+    - run: npm test
     - name: Coverage Report
-      run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} pnpm run coverage --if-present
+      run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run coverage --if-present
