--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,21 +7,35 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  build:
-    name: Build
+  test:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        test_number:
+          - 1
+          - 2
     steps:
     - uses: actions/checkout@master
     - name: Use Node.js 18.x
       uses: actions/setup-node@master
       with:
         version: 18.x
-        
-    - name: Install npm
-      
-    - run: pnpm ci
-    - run: pnpm run build --if-present
-    - run: pnpm test
-    - name: Coverage Report
+
+    - name: npm install
+      run: npm install
+
+    - name: Test ${{ matrix.test_number }}
+      run: make test-coverage-${{ matrix.test_number }}
+    - name: Coveralls Parallel
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.github_token }}
+        flag-name: run-${{ matrix.test_number }}
+        parallel: true
+
+  finish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
       run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} pnpm run coverage --if-present
