--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,11 +27,12 @@ jobs:
     - name: Test ${{ matrix.test_number }}
       run: make test-coverage-${{ matrix.test_number }}
     - name: Coveralls Parallel
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        flag-name: run-${{ matrix.test_number }}
-        parallel: true
+    - run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} pnpm run coverage --if-present
+#       uses: coverallsapp/github-action@master
+#       with:
+#         github-token: ${{ secrets.github_token }}
+#         flag-name: run-${{ matrix.test_number }}
+#         parallel: true
         
   finish:
     needs: test
