--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,32 +23,7 @@ jobs:
 
     - name: npm install
       run: npm install
-
-    - name: Test ${{ matrix.test_number }}
-      run: make test-coverage-${{ matrix.test_number }}
-    - name: Coveralls Parallel
-    - run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} pnpm run coverage --if-present
-#       uses: coverallsapp/github-action@master
-#       with:
-#         github-token: ${{ secrets.github_token }}
-#         flag-name: run-${{ matrix.test_number }}
-#         parallel: true
-        
-  finish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
     - name: Coveralls Finished
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.github_token }}
-        parallel-finished: true
-
-#   finish:
-#     needs: test
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Coveralls Finished
     
-#       run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} pnpm run coverage --if-present
-#       parallel-finished: true
+      run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run coverage --if-present
+
