--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,4 +1,4 @@
-name: Test Coveralls
+name: Code Coverage
 
 on:
   push:
@@ -19,6 +19,10 @@ jobs:
 
     - name: npm install
       run: npm install
+      
+    - name: check buld
+      run: npm buld
+      
     - name: Coveralls Finished
     
       run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run coverage --if-present
