--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,8 +20,8 @@ jobs:
     - name: npm install
       run: npm install
       
-    - name: check buld
-      run: npm buld
+    - name: check build
+      run: npm build
       
     - name: Coveralls Finished
     
