--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
-
+    
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -17,10 +17,10 @@ jobs:
       with:
         version: 18.x
 
-    - name: npm install
+    - name: npm install.
       run: npm install
       
-    - name: check build
+    - name: check build.
       run: npm build
       
     - name: Coveralls Finished
