--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm install
       
     - name: check build.
-      run: npm build
+      run: npm run build
       
     - name: Coveralls Finished
     
