--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,8 +20,8 @@ jobs:
 #     - name: npm install.
 #       run: npm install
       
-    - name: check build.
-      run: npm run build
+#     - name: check build.
+#       run: npm run build
       
     - name: Coveralls Finished
     
