bg: update the start script, README.md, & .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-PORT = 9090
-DB_NAME = Users
-DB_USER = postgres
-DB_PORT = 5432
-DB_HOST = localhost
-DB_PASSWORD = yourPassword
+PORT=8080
+DB_USER=killua
+DB_HOST=localhost
+DB_NAME=Users
+DB_PASSWORD=hunterxhunter
+DB_PORT=5432
