--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "Team-Axel-E-comm-backend",
   "version": "1.0.0",
   "description": "E-commerce backend API",
-  "main": "index.js",
+  "main": "build/server.js",
   "scripts": {
-    "start": "npm run build node build/index.js",
+    "start": "npm run build && node build/server.js",
     "dev": "npx nodemon",
-    "build": "rimraf build && tsc",
+    "build": "rimraf ./build && tsc",
     "test": "jest --coverage",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
@@ -39,6 +39,5 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
-    
   }
 }
