--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run build node build/index.js",
     "dev": "npx nodemon",
     "build": "rimraf build && tsc",
-    "test": "jest --coverage "
+    "test": "jest --coverage ",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "husky": "^8.0.3",
     "joi": "^17.7.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -29,6 +33,9 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "eslint": "^8.33.0",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
