--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "npx nodemon",
     "build": "rimraf build && tsc",
     "test": "jest --coverage ",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -38,8 +39,10 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
