--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "prepare": "husky install",
     "prettier": "prettier --write ."
   },
+  "lint-staged":{
+    "**/*.{js,jsx,ts,tsx}":[
+      "npx prettier --write",
+      "npx eslint --fix"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -41,6 +47,7 @@
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "jest": "^29.4.1",
+    "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
