--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "lint-staged":{
     "**/*.{js,jsx,ts,tsx}":[
-      "npx prettier --write",
+      "prettier --write .",
       "npx eslint --fix"
     ]
   },
