--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "coveralls": "^3.1.1",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
