--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "dev": "npx nodemon",
     "build": "rimraf ./build && tsc",
     "test": "jest --coverage",
-    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "prepare": "husky install"
+  },
+    "lint-staged":{
+    "**/*.{js,jsx,ts,tsx}":[
+      "prettier --write",
+      "npx eslint --fix"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -36,6 +43,7 @@
     "coveralls": "^3.1.1",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
