--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,28 +2,27 @@ name: Code Coverage
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: ['develop']
   pull_request:
-    branches: [ "develop" ]
-    
+    branches: ['develop']
+
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
-    - name: Use Node.js 18.x
-      uses: actions/setup-node@master
-      with:
-        version: 18.x
+      - uses: actions/checkout@master
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@master
+        with:
+          version: 18.x
 
-    - name: npm install.
-      run: npm install
-      
-    - name: check build.
-      run: npm run build
-      
-    - name: Coveralls Finished
-    
-      run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run coverage --if-present
+      - name: npm install.
+        run: npm install
 
+      - name: check build.
+        run: npm run build
+
+      - name: Coveralls Finished
+
+        run: env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npm run coverage --if-present
