--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "build": "rimraf ./build && tsc",
     "test": "jest --coverage",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "prettier": "prettier --write .",
     "prepare": "husky install"
   },
-    "lint-staged":{
-    "**/*.{js,jsx,ts,tsx}":[
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "npx eslint --fix"
     ]
@@ -45,6 +46,7 @@
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jest": "^29.4.1",
+    "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
