ch: update email verification

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
+BASE_URL=
 PORT=8080
+# DB credentials
 DB_USER=killua
 DB_HOST=localhost
 DB_NAME=Users
 DB_PASSWORD=hunterxhunter
 DB_PORT=5432
+# nodemailer credentials
+SECRET_TOKEN=
+EMAIL_USER=
+EMAIL_USERNAME=
+EMAIL_SECRET=
+EMAIL_PASSWORD=
+EMAIL_HOST=
+EMAIL_PORT=465
