--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "pnpm": "^7.26.3",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -40,10 +42,11 @@
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "coveralls": "^3.1.1",
