--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "skipLibCheck": true
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*", "src/utils/swagger.ts"]
+  "include": ["src/**/*", "src/utils/swagger.ts"],
+  "files":["types.d.ts"]
 }
