--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ DB_HOST=localhost
 DB_NAME=Users
 DB_PASSWORD=hunterxhunter
 DB_PORT=5432
+#session secret
+SESSION_SECRET=
 # nodemailer credentials
 SECRET_TOKEN=
 EMAIL_USER=
