--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node build/server.js",
     "dev": "npx nodemon",
-    "build": "rimraf ./build && tsc",
+    "build": "tsc",
     "test": "jest --coverage",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
@@ -33,7 +33,9 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "pnpm": "^7.27.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -45,6 +47,8 @@
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "coveralls": "^3.1.1",
