--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "pnpm": "^7.26.3",
@@ -38,11 +41,13 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth2": "^0.1.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
