--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "pnpm": "^7.27.0",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
