--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/express-session": "^1.17.5",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
