fix: resolve conflict

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node build/server.js",
     "dev": "npx nodemon",
-    "build": "rimraf ./build && tsc",
+    "build": "tsc",
     "test": "jest --coverage",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
@@ -22,6 +22,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth2": "^0.1.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -30,6 +32,7 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
+    "openapi-types": "^12.1.0",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.9.0",
@@ -48,8 +51,6 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.7",
-    "@types/passport": "^1.0.11",
-    "@types/passport-google-oauth2": "^0.1.5",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
