--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "googleapis": "^110.0.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
@@ -39,7 +42,6 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
