ft: add code cleanup, add product search, add cart ft
ch: add unit testing

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,29 @@
 BASE_URL=
 PORT=8080
 # DB credentials
-DB_USER=killua
+DB_USER=
 DB_HOST=localhost
-DB_NAME=Users
-DB_PASSWORD=hunterxhunter
+DB_NAME=cypher
+DB_PASSWORD=
 DB_PORT=5432
-#session secret
+DB_URL=postgres:
 SESSION_SECRET=
 # nodemailer credentials
 SECRET_TOKEN=
 EMAIL_USER=
 EMAIL_USERNAME=
-EMAIL_SECRET=
 EMAIL_PASSWORD=
 EMAIL_HOST=
 EMAIL_PORT=465
+# google credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# in a testing environment
+NODE_ENV=test
+TEST_DB_USER=killua
+TEST_DB_HOST=localhost
+TEST_DB_NAME=testcypher
+TEST_DB_PASSWORD=hunterxhunter
+TEST_DB_PORT=5432
+TEST_DB_URL=
+
