--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "team-axel-e-comm-backend",
   "version": "1.0.0",
   "description": "E-commerce backend API",
-  "main": "build/server.js",
+  "main": "build/src/server.js",
   "scripts": {
-    "start": "npm run build && node build/server.js",
+    "start": "npm run build && node build/src/server.js",
     "dev": "npx nodemon",
-    "build": "tsc",
-    "test": "jest --coverage",
-    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "build": "rimraf ./build && npx tsc",
+    "test": "jest --coverage --detectOpenHandles",
+    "test:watch": "npm run test -- --watch",
+    "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "watch": "tsc -w"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -39,6 +41,7 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "pnpm": "^7.27.0",
+    "rimraf": "^4.1.2",
     "sequelize": "^6.28.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
@@ -49,7 +52,6 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.5",
     "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
@@ -66,7 +68,6 @@
     "lint-staged": "^13.1.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
-    "rimraf": "^4.1.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
