--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*", "docs/swagger.ts"],
+  "include": ["src/**/*", "docs/swagger.ts", "test", "docs"],
   "files": ["types.d.ts"]
 }
