--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run build && node build/server.js",
     "dev": "npx nodemon",
-    "build": "rimraf ./build && tsc",
+    "build": "tsc",
     "test": "jest --coverage",
     "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
@@ -23,37 +23,43 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "pnpm": "^7.26.3",
-    "sequelize": "^6.28.0"
+    "pnpm": "^7.27.0",
+    "sequelize": "^6.28.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.16",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "coveralls": "^3.1.1",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
-    "jest": "^29.4.1",
-    "lint-staged": "^13.1.0",
+    "jest": "^29.4.2",
+    "lint-staged": "^13.1.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "rimraf": "^4.1.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
