--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "build/src/server.js",
   "scripts": {
     "start": "npm run build && node build/src/server.js",
-    "dev": "npx nodemon",
+    "dev": "cross-env NODE_ENV=development npx nodemon",
     "build": "rimraf ./build && npx tsc",
-    "test": "jest --coverage --detectOpenHandles",
+    "test": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles",
     "test:watch": "npm run test -- --watch",
     "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
