fx( conflict resolved ): btn this branch and main
fx( conflict resolved ): btn this branch and main

fx( conflict resolved ): btn this branch and main

Fix Db Connection

fx: changed the package manager to yarn

added: check on push and pull_request on brach main

fix: fix database migrations

fix: memory leaks fixes

ft: add search feature

fx: google authentication

ft: add cart feature(view/add/delete)

fix: fix product tests

fx(conflict resolved): btn main and this branch

--- a/docs/product.docs.yaml
+++ b/docs/product.docs.yaml
@@ -59,6 +59,27 @@ paths:
         200:
           description: A list of search results
 
+  # update a product
+  /api/v1/product/update/{productId}:
+    patch:
+      security: [{ jwt: [] }]
+      summary: Update a product
+      tags: [Product Routes]
+      requestBody:
+        description: Please fill all required fields you want to update
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/CreateProductInput'
+      responses:
+        '200':
+          description: Update done Successfully
+        '404':
+          description: This Product doesn't exists.
+        '401':
+          description: You are not allowed to access this route
+
 # schemas
 components:
   schemas:
