--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,6 @@ jobs:
   build_and_test:
     docker:
       - image: cimg/node:19.5.0
-      - image: circleci/postgres:10
-        environment:
-          POSTGRES_PASSWORD: $POSTGRES_PASSWORD
 
     environment:
       DB_HOST: localhost
@@ -14,18 +11,23 @@ jobs:
       GOOGLE_CLIENT_SECRET: ${{ vars.GOOGLE_CLIENT_SECRET }}
       SESSION_SECRET: ${{ vars.SESSION_SECRET }}
     steps:
-      - run:
-          name: Install ltree extension for Postgres
-          command: sudo apt-get update && sudo apt-get install postgresql-client && dockerize -wait tcp://localhost:5432 -timeout 1m && psql -U postgres -h localhost -p 5432 -c 'create database users'
       - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
       - run:
-          command: npm install
+          command: yarn install
           name: install dependencies
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
-          command: npm run test
+          command: yarn run test
           name: Test app
       - run:
-          command: npm run build
+          command: yarn run build
           name: Build app
       - persist_to_workspace:
           root: ~/project
