ft: Only seller should get all items

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,32 @@
-BASE_URL=
+# depending on the environment, the database url will be set
+
+# in a production environment
+DB_URL=
+
+# in a testing environment
+TEST_DB_URL=
+
+# in a local environment
+DEV_DB_URL=
+
+# update this CLIENT_URL to the url of the deployed app
+CLIENT_URL=
+
 PORT=8080
-# DB credentials
-DB_USER=
-DB_HOST=localhost
-DB_NAME=cypher
-DB_PASSWORD=
-DB_PORT=5432
-DB_URL=postgres:
+
+#session secret
 SESSION_SECRET=
-# nodemailer credentials
+
+# jwt secret
 SECRET_TOKEN=
+
+# nodemailer credentials
 EMAIL_USER=
 EMAIL_USERNAME=
 EMAIL_PASSWORD=
 EMAIL_HOST=
-EMAIL_PORT=465
+EMAIL_PORT=
+
 # google credentials
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-# in a testing environment
-NODE_ENV=test
-TEST_DB_USER=killua
-TEST_DB_HOST=localhost
-TEST_DB_NAME=testcypher
-TEST_DB_PASSWORD=hunterxhunter
-TEST_DB_PORT=5432
-TEST_DB_URL=
-
