--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "description": "E-commerce backend API",
   "main": "build/src/server.js",
   "scripts": {
-    "start": "npm run build && node build/src/server.js",
+    "start": "node build/src/server.js",
     "dev": "cross-env NODE_ENV=development npx nodemon",
-    "build": "rimraf ./build && npx tsc",
-    "test": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles",
-    "test:watch": "npm run test -- --watch",
+    "build": "node_modules/.bin/rimraf ./build && npx tsc",
+    "test": "cross-env NODE_ENV=test && yarn migration && yarn seed:test && yarn jest --coverage --detectOpenHandles",
+    "test:watch": "yarn test -- --watch",
     "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
     "prettier": "prettier --write .",
     "prepare": "husky install",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "migration": "yarn migrate:undo && yarn migrate",
+    "migrate": "cross-env NODE_ENV=test npx sequelize-cli db:migrate",
+    "migrate:undo": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
+    "migrate:dev": "yarn migrate:dev:undo && yarn migrate:dev:all",
+    "migrate:dev:all": "cross-env NODE_ENV=development npx sequelize-cli db:migrate",
+    "migrate:dev:undo": "cross-env NODE_ENV=development npx sequelize-cli db:migrate:undo:all",
+    "seed:dev": "yarn seed:dev:undo && yarn seed:dev:do",
+    "seed:dev:do": "cross-env NODE_ENV=development npx sequelize-cli db:seed:all",
+    "seed:dev:undo": "cross-env NODE_ENV=development npx sequelize-cli db:seed:undo:all",
+    "seed:test": "yarn seed:test:undo && yarn seed:test:do",
+    "seed:test:do": "cross-env NODE_ENV=test npx sequelize-cli db:seed:all",
+    "seed:test:undo": "cross-env NODE_ENV=test npx sequelize-cli db:seed:undo:all"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -28,6 +40,7 @@
     "@types/passport-google-oauth2": "^0.1.5",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "connect-session-sequelize": "^7.1.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
@@ -44,6 +57,7 @@
     "pnpm": "^7.27.0",
     "rimraf": "^4.1.2",
     "sequelize": "^6.28.0",
+    "stripe": "^11.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0"
   },
@@ -56,19 +70,22 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
+    "@types/stripe": "^8.0.417",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "coveralls": "^3.1.1",
-    "eslint": "^8.33.0",
+    "eslint": "8.1.0",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
     "lint-staged": "^13.1.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
+    "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
