--- a/docs/product.docs.yaml
+++ b/docs/product.docs.yaml
@@ -27,3 +27,23 @@ paths:
       responses:
         200:
           description: A list of search results
+  /api/v1/product/delete/{id}:
+    delete:
+      summary: delete a product
+      tags: [Product endpoints]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Parameter description in CommonMark or HTML.
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+      responses:
+        201:
+          description: Product deleted
+        401:
+          description: Unauthorized
+        400:
+          description: product not availble
