ch: code refactoring

--- a/docs/product.docs.yaml
+++ b/docs/product.docs.yaml
@@ -1,4 +1,35 @@
 paths:
+  # get all available products
+  /api/v1/product/available:
+    get:
+      summary: Get Only Available products from our API
+      tags: [Product Routes]
+      description: Returns all available products from our database
+      responses:
+        200:
+          description: Products fetched successfully
+
+  # create a new product
+  /api/v1/product/:
+    post:
+      security: [{ jwt: [] }]
+      summary: Create a new product
+      tags: [Product Routes]
+      requestBody:
+        description: please fill all required fields
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/CreateProductInput'
+      responses:
+        '201':
+          description: Post Created Successfully
+        '400':
+          description: This Product already exists, You can update the stock levels
+        '401':
+          description: You are not allowed to access this route
+
   # search for a product
   /api/v1/product/search:
     get:
@@ -24,6 +55,58 @@ paths:
           schema:
             type: string
           description: The maximum price in a range
-      responses:
-        200:
-          description: A list of search results
+    responses:
+      200:
+        description: A list of search results
+
+# schemas
+components:
+  schemas:
+    CreateProductInput:
+      type: object
+      required:
+        - name
+        - category
+        - description
+        - stock
+        - price
+        - images
+      properties:
+        name:
+          type: string
+          default: Meat
+        category:
+          type: string
+          default: Food
+        description:
+          type: string
+          default: Quality meat for your whole family
+        stock:
+          type: string
+          default: Available
+        price:
+          type: number
+          default: 3
+        images:
+          type: string
+          default:
+    CreatePostResponse:
+      type: object
+      properties:
+        message:
+          type: string
+        data:
+          type: object
+        properties:
+          name:
+            type: string
+          category:
+            type: string
+          description:
+            type: string
+          stock:
+            type: string
+          price:
+            type: number
+          images:
+            type: string
