--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "prettier": "prettier --write .",
     "prepare": "husky install",
     "watch": "tsc -w",
-    "undoMigrations": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
+    "migration": "yarn migrate:undo && yarn migrate",
     "migrate": "cross-env NODE_ENV=test npx sequelize-cli db:migrate",
-    "migration": "yarn undoMigrations && yarn migrate",
-    "migrateDev": "cross-env NODE_ENV=development npx sequelize-cli db:migrate"
+    "migrate:undo": "cross-env NODE_ENV=test npx sequelize-cli db:migrate:undo:all",
+    "migrate:dev": "yarn migrate:dev:undo && yarn migrate:dev:all",
+    "migrate:dev:all": "cross-env NODE_ENV=development npx sequelize-cli db:migrate",
+    "migrate:dev:undo": "cross-env NODE_ENV=development npx sequelize-cli db:migrate:undo:all",
+    "seed": "yarn seed:dev:undo && yarn seed:dev",
+    "seed:dev": "cross-env NODE_ENV=development npx sequelize-cli",
+    "seed:dev:undo": "cross-env NODE_ENV=development npx sequelize-cli db:seed:undo:all"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
@@ -63,10 +68,11 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "coveralls": "^3.1.1",
-    "eslint": "^8.33.0",
+    "eslint": "8.1.0",
     "eslint-config-prettier": "^8.6.0",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
