--- a/docs/cart.docs.yaml
+++ b/docs/cart.docs.yaml
@@ -19,17 +19,17 @@ paths:
         content:
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/Cart'
+              $ref: "#/components/schemas/Cart"
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad request. User ID must be an integer and larger than 0.
-        '401':
+        "401":
           description: Authorization information is missing or invalid.
-        '404':
+        "404":
           description: A user with the specified ID was not found.
-        '5XX':
+        "5XX":
           description: Unexpected error.
   # remove cart item
   /api/v1/cart/remove/{cartItemId}:
