bg: add ncp to copy the public & views folders

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node build/src/server.js",
     "dev": "cross-env NODE_ENV=development npx nodemon",
-    "build": "node_modules/.bin/rimraf ./build && npx tsc",
+    "build": "node_modules/.bin/rimraf ./build && npx tsc && ncp views build/views && ncp public build/public",
     "test": "cross-env NODE_ENV=test && yarn migration && yarn seed:test && yarn jest --coverage --detectOpenHandles",
     "test:watch": "yarn test -- --watch",
     "coverage": "jest --coverage --detectOpenHandles --coverageReporters=text-lcov | coveralls",
@@ -47,6 +47,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
+    "ncp": "^2.0.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
     "openapi-types": "^12.1.0",
