--- a/docs/resetPassword.docs.yaml
+++ b/docs/resetPassword.docs.yaml
@@ -52,6 +52,8 @@ components:
           type: string
           example: "@gmail.com"
       type: object
+      required:
+        - email
       CreatePostResponse:
         type: object
         properties:
@@ -69,3 +71,5 @@ components:
         password:
           type: string
           default: "****"
+      required:
+        - password
